applications/kube-prometheus-stack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metrics
  labels:
    pod-security.kubernetes.io/enforce: privileged
