applications/kube-prometheus-stack/httproute-prometheus-oauth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/description: Prometheus
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Admin
    gethomepage.dev/href: https://prometheus.thegraveshouse.com
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/name: Log Explorer
    gethomepage.dev/pod-selector: app.kubernetes.io/name=prometheus
    gethomepage.dev/siteMonitor: https://prometheus.thegraveshouse.com
  name: metrics-prometheus-oauth
  namespace: metrics
spec:
  hostnames:
  - prometheus.thegraveshouse.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: traefik
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: oauth2-proxy-metrics-prometheus
      namespace: metrics
      port: 80
      weight: 1
    filters:
    - extensionRef:
        group: traefik.io
        kind: Middleware
        name: auth-headers-metrics-prometheus
      type: ExtensionRef
    matches:
    - path:
        type: PathPrefix
        value: /oauth2/
